--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ img{
 
 @media (min-width: 768px){
     .img-alta{
-        width: 17.5rem;
-        height: 24.2rem;
+        width: 29.7rem;
+        height: 63.0rem;
     }
 }
 
@@ -188,8 +188,31 @@ img{
     margin-top: .5rem;
 }
 
+/* Galeria */
 
+.galeria{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    row-gap: 1rem;
+}
 
+/* Posiciones de las imagenes  */
+
+.img2{
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+}
+
+.img3{
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+}
+
+.img4{
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+}
 
 /* Footer */
 
